# audi

./: .buildinfo  .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  audi-config.cmake.in  audi_devel.yml  azure-pipelines.yml  config.hpp.in  doc_c++.html  doc_python.html  documentation.html  functions.html  gdual.html  genindex.html  index.html  install_c.html  install_p.html  installation.html  main.cpp  objects.inv  prova.cpp  py_gdual.html  py_tm.html  quickstart.html  search.html  searchindex.js  setup.py  taylor_model.html  taylor_model_bounding.html  taylor_model_functions.html  taylor_model_utilities.html  theory.html  theory_algebra.html  utilities.html
.circleci/: config.yml
.github/workflows/: joss.yml  main.yml
_sources/: doc_c++.rst.txt  doc_python.rst.txt  functions.rst.txt  gdual.rst.txt  index.rst.txt  index.txt  install_c.rst.txt  install_p.rst.txt  installation.rst.txt  installation.txt  py_tm.rst.txt  quickstart.rst.txt  quickstart.txt  taylor_model_utilities.rst.txt  theory.txt  utilities.rst.txt
_sources/docs/: cpp_docs.txt  index.txt
_sources/notebooks/: example11.ipynb.txt  example13.ipynb.txt  kepler_ode.ipynb.txt  mp_gdual.ipynb.txt  univariate_functions.ipynb.txt  vectorized_double.ipynb.txt
_static/: documentation_options.js
cmake_modules/: AudiCompilerLinkerSettings.cmake  AudiFindBoost.cmake  AudiPlatformSettings.cmake  AudiPythonSetup.cmake  FindPiranha.cmake  mpfr_check_version.cpp
cmake_modules/yacma/: YACMACompilerLinkerSettings.cmake
doc/doxygen/: Doxyfile  Doxyfile.in
doc/examples/: getting_started.cpp  getting_started.py
doc/sphinx/: Makefile  conf.py  conf.py.in  doc_python.rst  functions.rst  gdual.rst  index.rst  install_c.rst  install_p.rst  installation.rst  make.bat  py_gdual.rst  quickstart.rst  taylor_model.rst  taylor_model_bounding.rst  taylor_model_functions.rst  theory.rst  theory_algebra.rst  utilities.rst
doc/sphinx/_static/: custom.css
doc/sphinx/docs/: cpp_docs.rst  index.rst
doc/sphinx/notebooks/: example00.ipynb  example01.ipynb  example10.ipynb  kepler_ode_sph.ipynb  map_inversion.ipynb  plotting_functions.py
doc/sphinx2/: doc_c++.rst  documentation.rst  functions.rst  gdual.rst  index.rst  install_p.rst  quickstart.rst  utilities.rst
doc/sphinx2/_build/doctrees/: doc_c++.doctree  documentation.doctree  environment.pickle  gdual.doctree  index.doctree  install_c++.doctree  install_c.doctree  install_p.doctree  install_python.doctree  installation.doctree  quickstart.doctree  theory.doctree  theory_algebra.doctree
doc/sphinx2/_build/html/: doc_c++.html  documentation.html  gdual.html  genindex.html  index.html  install_c++.html  install_c.html  install_p.html  install_python.html  installation.html  (+6 more)
docs/: cpp_docs.html  index.html
doxygen/: annotated.html  audi_8hpp_source.html  classaudi_1_1gdual-members.html  classaudi_1_1gdual.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  formula.repository  functions.html  functions_8hpp_source.html  functions_func.html  functions_rela.html  gdual_8hpp_source.html  index.html  namespaceaudi.html  namespacemembers.html  namespacemembers_func.html  namespaces.html
doxygen/search/: all_0.js  all_1.js  all_2.js  all_4.js  all_5.js  all_6.js  all_8.js  all_a.js  functions_0.js  functions_2.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  namespaces_0.js  pages_0.js  related_0.js  searchdata.js
examples/: Neural network and gradient descent.ipynb  example0.ipynb  example00.ipynb  example01.ipynb  example02.ipynb  example10.ipynb  example12.ipynb  example13.ipynb  nn.py
include/audi/: audi.hpp  audi_dummy.cpp  back_compatibility.hpp  complex.hpp  exceptions.hpp  functions.hpp  functions_from_d.hpp  gdual.hpp  invert_map.hpp  io.hpp  real128.hpp  taylor_model.hpp  taylor_model_bounding.hpp  taylor_model_functions.hpp  taylor_model_utilities.hpp  type_traits.hpp  vectorized.hpp  vectorized_double.hpp
include/audi/detail/: overloads.hpp  overloads_vectorized.hpp
notebooks/: example00.html  example01.html  example10.html  example11.html  example11.ipynb  example12.html  example12.ipynb  example13.html  kepler_ode.html  kepler_ode_sph.html  map_inversion.html  mp_gdual.html  multivariate_functions.html  multivariate_functions.ipynb  univariate_functions.html  vectorized_double.html  vectorized_double.ipynb  volterra_ode.html  volterra_ode.ipynb
paper/: paper.bib  paper.md
pyaudi/: CMakeLists.txt  __init__.py  _version.py.in  common_utils.hpp  core.cpp  docstrings.cpp  docstrings.hpp  expose_gdual.hpp  expose_taylor_model.hpp  python_includes.hpp  test.py
src/: CMakeLists.txt  audi.hpp  audi_dummy.cpp  coefficient_v.hpp  functions.hpp  functions_from_d.hpp  gdual.hpp  gdual_v.hpp  operators.hpp  type_traits.hpp  vectorized_double.hpp
src/detail/: coefficient_v.hpp  complex.hpp  overloads.hpp
tests/: CMakeLists.txt  a.out  division_perf.cpp  functions.cpp  functions_floating_precision.cpp  functions_from_d.cpp  functions_from_d_perf.cpp  gdual.cpp  gdual_add.cpp  gdual_d.cpp  gdual_mp.cpp  gdual_v.cpp  gdual_v2.cpp  helpers.hpp  invert_map.cpp  invert_map_perf.cpp  multiplication_perf.cpp  multiplication_perf_DACE.cpp  taylor_model.cpp  taylor_model_bounding.cpp  taylor_model_functions.cpp  taylor_model_utilities.cpp  trigonometry_perf.cpp  vectorized.cpp  vectorized_double.cpp  vectorized_perf.cpp  vectorized_perf_vs_DACE.cpp
tools/: build-manylinux-wheels.sh  circleci_bionic_gcc7_conda.sh  circleci_focal_gcc9_conda.sh  focal_gcc9_conda.sh  gha-osx-debug.sh  gha-ubuntu-debug.sh  gha-windows-release.ps1  gha_osx_debug.sh  gha_ubuntu_asan.sh  gha_ubuntu_coverage.sh  gha_windows_release.ps1  install_appveyor.py  install_deps.sh  install_docker.sh  install_travis.sh  linux-wheels.sh  manylinux_wheel_setup.py  mingw_wheel_libs_python2.txt  mingw_wheel_libs_python27.txt  mingw_wheel_libs_python3.txt  mingw_wheel_libs_python36.txt  mingw_wheel_libs_python37.txt  mingw_wheel_setup.py  setup.py  travis-all.sh  travis-docker.sh  travis_osx.sh  wheel_setup.py
(+3 files in other folders)
